fixed bug with player messages - When switching board configuration the players messages did not reset. Now they do

--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -27,18 +27,30 @@
         </div>
         <ul>
           <li>
-            <button class="nav-btn" data-target="rules" style="display: none">Rules</button>
+            <button class="nav-btn" data-target="rules" style="display: none">
+              Rules
+            </button>
           </li>
           <li>
-            <button class="nav-btn" data-target="game" style="display: none">Game Board</button>
+            <button class="nav-btn" data-target="game" style="display: none">
+              Game Board
+            </button>
           </li>
           <li>
-            <button class="nav-btn" data-target="configuration" style="display: none">
+            <button
+              class="nav-btn"
+              data-target="configuration"
+              style="display: none"
+            >
               Configuration
             </button>
           </li>
           <li>
-            <button class="nav-btn" data-target="leaderboard" style="display: none">
+            <button
+              class="nav-btn"
+              data-target="leaderboard"
+              style="display: none"
+            >
               Leaderboard
             </button>
           </li>
@@ -412,7 +424,7 @@
               <table>
                 <thead>
                   <tr>
-                    <th>Board Configuration [Number of Squares]</th>
+                    <th>Board Configuration</th>
                     <th>AI Level [Depth Search]</th>
                     <th>Wins</th>
                     <th>Defeats</th>
@@ -421,19 +433,19 @@
                 <!-- SAMPLE DATA -->
                 <tbody>
                   <tr>
-                    <td>2</td>
+                    <td>2 Squares</td>
                     <td>3</td>
                     <td>0</td>
                     <td>1</td>
                   </tr>
                   <tr>
-                    <td>3</td>
+                    <td>3 Squares</td>
                     <td>3</td>
                     <td>0</td>
                     <td>1</td>
                   </tr>
                   <tr>
-                    <td>4</td>
+                    <td>4 Squares</td>
                     <td>3</td>
                     <td>0</td>
                     <td>1</td>
@@ -450,6 +462,7 @@
                     <th>Score</th>
                   </tr>
                 </thead>
+                <!-- SAMPLE DATA -->
                 <tbody>
                   <tr>
                     <td>1</td>
@@ -465,16 +478,6 @@
                     <td>3</td>
                     <td>Mark</td>
                     <td>80</td>
-                  </tr>
-                  <tr>
-                    <td>4</td>
-                    <td>Sarah</td>
-                    <td>70</td>
-                  </tr>
-                  <tr>
-                    <td>5</td>
-                    <td>David</td>
-                    <td>60</td>
                   </tr>
                 </tbody>
               </table>
@@ -628,11 +631,12 @@
     <script src="static/js/rules.js"></script>
     <script src="static/js/boardGame.js"></script>
     <script src="static/js/logicGame.js"></script>
-    <script src="static/js/configuration.js"></script>
+
     <script src="static/js/leaderboard.js"></script>
     <script src="static/js/authentication.js"></script>
     <script src="static/js/ai.js"></script>
     <script src="static/js/heuristics.js"></script>
+    <script src="static/js/configuration.js"></script>
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
