leaderboard is working

--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -430,26 +430,8 @@
                     <th>Defeats</th>
                   </tr>
                 </thead>
-                <!-- SAMPLE DATA -->
                 <tbody>
-                  <tr>
-                    <td>2 Squares</td>
-                    <td>3</td>
-                    <td>0</td>
-                    <td>1</td>
-                  </tr>
-                  <tr>
-                    <td>3 Squares</td>
-                    <td>3</td>
-                    <td>0</td>
-                    <td>1</td>
-                  </tr>
-                  <tr>
-                    <td>4 Squares</td>
-                    <td>3</td>
-                    <td>0</td>
-                    <td>1</td>
-                  </tr>
+                <!-- Powered by javascript -->
                 </tbody>
               </table>
             </div>
