display difficulty instead of depth

--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -425,7 +425,7 @@
                 <thead>
                   <tr>
                     <th>Board Configuration</th>
-                    <th>AI Level [Depth Search]</th>
+                    <th>AI Level</th>
                     <th>Wins</th>
                     <th>Defeats</th>
                   </tr>
