Added a restart button

--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -319,6 +319,11 @@
 
               <!-- Game Board Configuration -->
               <div id="board" class="board-container"></div>
+
+              <!-- Restart Game Button -->
+              <div class="restart">
+                <button id="restart-button" class="restart-btn">RESTART</button>
+              </div>
             </div>
 
             <!-- Player 2 -->
@@ -431,7 +436,7 @@
                   </tr>
                 </thead>
                 <tbody>
-                <!-- Powered by javascript -->
+                  <!-- Powered by javascript -->
                 </tbody>
               </table>
             </div>
