Implemented the logic behind the restart button

--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -321,7 +321,7 @@
               <div id="board" class="board-container"></div>
 
               <!-- Restart Game Button -->
-              <div class="restart">
+              <div id="restart-button-container" class="restart">
                 <button id="restart-button" class="restart-btn">RESTART</button>
               </div>
             </div>
@@ -392,8 +392,8 @@
                   class="select-config"
                   name="first-player"
                 >
-                  <option value="1">Player1</option>
-                  <option value="2">Player2</option>
+                  <option value="1">Player 1</option>
+                  <option value="2">Player 2</option>
                 </select>
               </div>
 
@@ -425,7 +425,7 @@
                 Multi-Player
               </button>
             </div>
-            <div class="leaderboard-singleplayer hidden">
+            <div class="leaderboard-singleplayer">
               <table>
                 <thead>
                   <tr>
@@ -440,7 +440,7 @@
                 </tbody>
               </table>
             </div>
-            <div class="leaderboard-multiplayer">
+            <div class="leaderboard-multiplayer hidden">
               <table>
                 <thead>
                   <tr>
