updated alt's in html

--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -97,7 +97,7 @@
                         </p>
                         <p>The spots are marked with a circle</p>
                         <div class="logo-basic-info">
-                          <img src="./static/images/logo.png" />
+                          <img src="./static/images/logo.png" alt="" />
                         </div>
                       </div>
                       <div class="slide">
@@ -116,9 +116,9 @@
                           the boards have only 2, 3 and 4 squares, respectively
                         </p>
                         <div class="board-size-showcase">
-                          <img src="./static/images/2SidedBoard.png" />
-                          <img src="./static/images/3SidedBoard.png" />
-                          <img src="./static/images/4SidedBoard.png" />
+                          <img src="./static/images/2SidedBoard.png" alt="" />
+                          <img src="./static/images/3SidedBoard.png" alt="" />
+                          <img src="./static/images/4SidedBoard.png" alt="" />
                         </div>
                       </div>
                       <div class="slide">
@@ -136,9 +136,9 @@
                           board
                         </p>
                         <div class="pieces-showcase">
-                          <img src="./static/images/bluePieces.png" />
-                          <img src="./static/images/initialLayout.png" />
-                          <img src="./static/images/redPieces.png" />
+                          <img src="./static/images/bluePieces.png" alt="" />
+                          <img src="./static/images/initialLayout.png" alt="" />
+                          <img src="./static/images/redPieces.png" alt="" />
                         </div>
                         <p>On the board, the pieces are placed on the spots</p>
                       </div>
@@ -156,7 +156,7 @@
                           part of a mill
                         </p>
                         <div class="mill-showcase">
-                          <img src="./static/images/blueMill.png" />
+                          <img src="./static/images/blueMill.png" alt="" />
                         </div>
                       </div>
                     </div>
@@ -179,7 +179,7 @@
                         <p>Players choose a color and decide who plays first</p>
                         <p>Initially, the board is empty:</p>
                         <div class="initial-board-layout">
-                          <img src="./static/images/initialLayout.png" />
+                          <img src="./static/images/initialLayout.png" alt="" />
                         </div>
                         <p>The game has 2 phases:</p>
                         <p>Phase 1 - Drop the pieces (drop)</p>
@@ -194,7 +194,10 @@
                         <p>Mills can be created (but it is not advantageous)</p>
                         <p>When all pieces are placed, this phase ends</p>
                         <div class="place-pieces-showcase">
-                          <img src="./static/images/placePiecesPhase.png" />
+                          <img
+                            src="./static/images/placePiecesPhase.png"
+                            alt=""
+                          />
                         </div>
                       </div>
                       <div class="slide">
@@ -210,7 +213,10 @@
                           line
                         </p>
                         <div class="move-pieces-showcase">
-                          <img src="./static/images/movePiecesPhase.png" />
+                          <img
+                            src="./static/images/movePiecesPhase.png"
+                            alt=""
+                          />
                         </div>
                       </div>
                       <div class="slide">
@@ -226,7 +232,7 @@
                         </p>
                         <p>And form a mill again on the next move</p>
                         <div class="capture-pieces-showcase">
-                          <img src="./static/images/capturePieces.png" />
+                          <img src="./static/images/capturePieces.png" alt="" />
                         </div>
                       </div>
                       <div class="slide">
@@ -237,7 +243,10 @@
                           They are not restricted to moving to adjacent spots
                         </p>
                         <div class="fly-pieces-showcase">
-                          <img src="./static/images/flyingPiecesPhase.png" />
+                          <img
+                            src="./static/images/flyingPiecesPhase.png"
+                            alt=""
+                          />
                         </div>
                       </div>
                       <div class="slide">
@@ -253,7 +262,7 @@
                           is no winner
                         </p>
                         <div class="end-game-showcase">
-                          <img src="./static/images/EndGame.png" />
+                          <img src="./static/images/EndGame.png" alt="" />
                         </div>
                       </div>
                     </div>
