Fixed Resign Buttons and Restart Button Logic

--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -314,9 +314,9 @@
               <div class="bottom-separatory-line-player1"></div>
 
               <!-- Player 1 - Give Up Button -->
-              <button class="player1-give-up-btn">
-                <div class="give-up-text">RESIGN</div>
-              </button>
+              <div class="player1-resign-container">
+                <button class="player1-resign-btn"> RESIGN </button>
+              </div>
             </div>
 
             <!-- Game Board -->
@@ -362,9 +362,9 @@
               <div class="bottom-separatory-line-player2"></div>
 
               <!-- Player 2 - Give Up Button -->
-              <button class="player2-give-up-btn">
-                <div class="give-up-text">RESIGN</div>
-              </button>
+              <div class="player2-resign-container">
+                <button class="player2-resign-btn"> RESIGN </button>
+              </div>
             </div>
           </div>
         </section>
