--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="static/css/base.css" />
     <link rel="stylesheet" href="static/css/style.css" />
     <link rel="stylesheet" href="static/css/rules.css" />
-    <link rel="stylesheet" href="static/css/boardGame.css" />
+    <link rel="stylesheet" href="static/css/canvas.css" />
     <link rel="stylesheet" href="static/css/configuration.css" />
     <link rel="stylesheet" href="static/css/leaderboard.css" />
     <link rel="stylesheet" href="static/css/authentication.css" />
@@ -315,7 +315,7 @@
 
               <!-- Player 1 - Give Up Button -->
               <div class="player1-resign-container">
-                <button class="player1-resign-btn"> RESIGN </button>
+                <button class="player1-resign-btn">RESIGN</button>
               </div>
             </div>
 
@@ -363,7 +363,7 @@
 
               <!-- Player 2 - Give Up Button -->
               <div class="player2-resign-container">
-                <button class="player2-resign-btn"> RESIGN </button>
+                <button class="player2-resign-btn">RESIGN</button>
               </div>
             </div>
           </div>
@@ -625,7 +625,7 @@
     </main>
     <script src="static/js/script.js"></script>
     <script src="static/js/rules.js"></script>
-    <script src="static/js/boardGame.js"></script>
+    <script src="static/js/canvas.js"></script>
     <script src="static/js/logicGame.js"></script>
 
     <script src="static/js/leaderboard.js"></script>
