Added more server requests

--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -633,7 +633,7 @@
     <script src="static/js/ai.js"></script>
     <script src="static/js/heuristics.js"></script>
     <script src="static/js/configuration.js"></script>
-    <script src="static/js/foo.js"></script>
+    <script src="static/js/serverRequests.js"></script>
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
