Playing with errors

--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="static/css/configuration.css" />
     <link rel="stylesheet" href="static/css/leaderboard.css" />
     <link rel="stylesheet" href="static/css/authentication.css" />
+    <link rel="stylesheet" href="static/css/errorMessages.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
@@ -621,6 +622,17 @@
             </div>
           </div>
         </section>
+      </div>
+      <div class="modal">
+        <div class="modal-content">
+          <span class="closeIcon"><i class="fas-fa-times"></i></span>
+          <div class="modal-body">
+            <span class="icon"><i class = "fas-fa-exclamation-triangle"></i></span>
+            <div class="right-items">
+              <h1>Poopyhead</h1>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
     <script src="static/js/serverRequests.js"></script>
