--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="https://kit.fontawesome.com/5a93f63a11.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="static/css/base.css" />
@@ -11,6 +12,8 @@
     <link rel="stylesheet" href="static/css/leaderboard.css" />
     <link rel="stylesheet" href="static/css/authentication.css" />
     <link rel="stylesheet" href="static/css/errorMessages.css" />
+    <link rel="stylesheet" href="https://fontawesome.com/icons/square-xmark?f=classic&s=solid" />
+    <link rel="stylesheet" href="https://fontawesome.com/icons/triangle-exclamation?f=classic&s=solid" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
@@ -19,6 +22,17 @@
     <title>Nine Men's Morris</title>
   </head>
   <body>
+    <div class="modal">
+      <div class="modal-content">
+        <span class="closeIcon"><a><i class="fa-solid fa-square-xmark"></i></a></span>
+        <div class="modal-body">
+          <span class="error-icon"><i class="fa-solid fa-triangle-exclamation"></i></span>
+          <div class="error-message">
+            <h1></h1>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- Navigation Bar -->
     <header>
       <nav>
@@ -622,17 +636,6 @@
             </div>
           </div>
         </section>
-      </div>
-      <div class="modal">
-        <div class="modal-content">
-          <span class="closeIcon"><i class="fas-fa-times"></i></span>
-          <div class="modal-body">
-            <span class="icon"><i class = "fas-fa-exclamation-triangle"></i></span>
-            <div class="right-items">
-              <h1>Poopyhead</h1>
-            </div>
-          </div>
-        </div>
       </div>
     </main>
     <script src="static/js/serverRequests.js"></script>
