Implemented Ranking Lookup for Multiplayer games

--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="https://kit.fontawesome.com/5a93f63a11.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/5a93f63a11.js"
+      crossorigin="anonymous"
+    ></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="static/css/base.css" />
@@ -12,8 +15,14 @@
     <link rel="stylesheet" href="static/css/leaderboard.css" />
     <link rel="stylesheet" href="static/css/authentication.css" />
     <link rel="stylesheet" href="static/css/errorMessages.css" />
-    <link rel="stylesheet" href="https://fontawesome.com/icons/square-xmark?f=classic&s=solid" />
-    <link rel="stylesheet" href="https://fontawesome.com/icons/triangle-exclamation?f=classic&s=solid" />
+    <link
+      rel="stylesheet"
+      href="https://fontawesome.com/icons/square-xmark?f=classic&s=solid"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fontawesome.com/icons/triangle-exclamation?f=classic&s=solid"
+    />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
@@ -459,7 +468,8 @@
                   <tr>
                     <th>Rank</th>
                     <th>Username</th>
-                    <th>Score</th>
+                    <th>Victories</th>
+                    <th>Games</th>
                   </tr>
                 </thead>
                 <!-- SAMPLE DATA -->
@@ -468,15 +478,18 @@
                     <td>1</td>
                     <td>John</td>
                     <td>100</td>
+                    <td>100</td>
                   </tr>
                   <tr>
                     <td>2</td>
                     <td>Jane</td>
                     <td>90</td>
+                    <td>90</td>
                   </tr>
                   <tr>
                     <td>3</td>
                     <td>Mark</td>
+                    <td>80</td>
                     <td>80</td>
                   </tr>
                 </tbody>
@@ -505,11 +518,14 @@
                 </div>
                 <div class="modal">
                   <div class="modal-content">
-                    <span class="closeIcon"><a><i class="fa-solid fa-square-xmark"></i></a></span>
+                    <span class="closeIcon"
+                      ><a><i class="fa-solid fa-square-xmark"></i></a
+                    ></span>
                     <div class="modal-body">
-                      <span class="error-icon"><i class="fa-solid fa-triangle-exclamation"></i></span>
-                      <div class="error-message">
-                      </div>
+                      <span class="error-icon"
+                        ><i class="fa-solid fa-triangle-exclamation"></i
+                      ></span>
+                      <div class="error-message"></div>
                     </div>
                   </div>
                 </div>
