--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -653,17 +653,17 @@
         </section>
       </div>
     </main>
-    <script src="static/js/serverRequests.js"></script>
-    <script src="static/js/script.js"></script>
-    <script src="static/js/rules.js"></script>
-    <script src="static/js/canvas.js"></script>
-    <script src="static/js/logicGame.js"></script>
+    <script type="module" src="static/js/serverRequests.js"></script>
+    <script type="module" src="static/js/script.js"></script>
+    <script type="module" src="static/js/rules.js"></script>
+    <script type="module" src="static/js/canvas.js"></script>
+    <script type="module" src="static/js/logicGame.js"></script>
 
-    <script src="static/js/leaderboard.js"></script>
-    <script src="static/js/authentication.js"></script>
-    <script src="static/js/ai.js"></script>
-    <script src="static/js/heuristics.js"></script>
-    <script src="static/js/configuration.js"></script>
+    <script type="module" src="static/js/leaderboard.js"></script>
+    <script type="module" src="static/js/authentication.js"></script>
+    <script type="module" src="static/js/ai.js"></script>
+    <script type="module" src="static/js/heuristics.js"></script>
+    <script type="module" src="static/js/configuration.js"></script>
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
