--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -302,9 +302,9 @@
           <!-- Game Board -->
           <div id="game-layout" class="game-layout">
             <canvas id="throbber-bg" style="width: 100%; height: 100%; position: absolute; 
-    top: 0; left: 0; z-index: 20; background-color: #000000d5;"></canvas>
+    top: 0; left: 0; z-index: 20; background-color: #000000d5; display: none;"></canvas>
             <canvas id="throbber" style="width: 100%; height: 100%; position: absolute; 
-    top: 0; left: 0; z-index: 21"></canvas>
+    top: 0; left: 0; z-index: 21; display: none;"></canvas>
             <!-- Player 1 -->
             <div class="player1">
               <div id="player1-info" class="player1-info">
