--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -302,7 +302,7 @@
           <!-- Game Board -->
           <div id="game-layout" class="game-layout">
             <canvas id="throbber-bg" style="width: 100%; height: 100%; position: absolute; 
-    top: 0; left: 0; z-index: 20; background-color: #000000d5; display: none;"></canvas>
+    top: 0; left: 0; z-index: 20; background-color: #00000082; display: none;"></canvas>
             <canvas id="throbber" style="width: 100%; height: 100%; position: absolute; 
     top: 0; left: 0; z-index: 21; display: none;"></canvas>
             <!-- Player 1 -->
@@ -507,9 +507,9 @@
         <section id="authentication" class="content active">
           <div class="container-authentication">
             <!-- <canvas id="throbber-bg" style="width: 100%; height: 100%; position: absolute; 
-    top: 0; left: 0; z-index: 10; background-color: #000000d5;"></canvas>
+    top: 0; left: 0; z-index: 20; background-color: #000000d5; display: none;"></canvas>
             <canvas id="throbber" style="width: 100%; height: 100%; position: absolute; 
-    top: 0; left: 0; z-index: 10"></canvas> -->
+    top: 0; left: 0; z-index: 21; display: none;"></canvas> -->
             <div class="content-authentication">
               <h2 class="logo"><i class="bx bxl-firebase"></i>Authenticaton</h2>
 
