--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -5,7 +5,6 @@
       src="https://kit.fontawesome.com/5a93f63a11.js"
       crossorigin="anonymous"
     ></script>
-    <script src="throbber.js" defer></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="static/css/base.css" />
@@ -298,12 +297,12 @@
         </section>
 
         <!-- Game -->
-        <section id="game" class="content">     
+        <section id="game" class="content">
           <!-- Game Board -->
           <div id="game-layout" class="game-layout">
-            <canvas id="throbber-bg" style="width: 100%; height: 100%; position: absolute; 
+            <canvas id="throbber-bg" style="width: 100%; height: 100%; position: absolute;
     top: 0; left: 0; z-index: 20; background-color: #00000082; display: none;"></canvas>
-            <canvas id="throbber" style="width: 100%; height: 100%; position: absolute; 
+            <canvas id="throbber" style="width: 100%; height: 100%; position: absolute;
     top: 0; left: 0; z-index: 21; display: none;"></canvas>
             <!-- Player 1 -->
             <div class="player1">
@@ -506,9 +505,9 @@
         <!-- Authenticaton -->
         <section id="authentication" class="content active">
           <div class="container-authentication">
-            <!-- <canvas id="throbber-bg" style="width: 100%; height: 100%; position: absolute; 
+            <!-- <canvas id="throbber-bg" style="width: 100%; height: 100%; position: absolute;
     top: 0; left: 0; z-index: 20; background-color: #000000d5; display: none;"></canvas>
-            <canvas id="throbber" style="width: 100%; height: 100%; position: absolute; 
+            <canvas id="throbber" style="width: 100%; height: 100%; position: absolute;
     top: 0; left: 0; z-index: 21; display: none;"></canvas> -->
             <div class="content-authentication">
               <h2 class="logo"><i class="bx bxl-firebase"></i>Authenticaton</h2>
@@ -681,5 +680,6 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <script src="static/js/throbber.js" defer></script>
   </body>
 </html>
